--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,14 @@ h1, h2, h3 {
   font-family: 'Antic', sans-serif;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
 a {
   text-decoration: none;
   color: #75720B;
@@ -99,4 +107,48 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+}
+
+.image-container {
+  margin: 1rem auto;
+  width: 25%;
+}
+
+.image-container img {
+  max-width: 100%;
+}
+
+/* Home Styles */
+
+.home-box {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.7);
+  width: 60%;
+  margin: 1rem auto;
+}
+
+.text-box {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-items: space-between;
+  align-items: center;
+  background: #CFDF07;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.text-box h1 {
+  margin-bottom: 1rem;
+}
+
+button {
+  background: #212427;
+  color: ivory;
+  padding: 1rem;
+  border: none;
+  margin: 1rem;
+  font-family:'Raleway', sans-serif;
 }
