--- a/src/index.css
+++ b/src/index.css
@@ -93,13 +93,30 @@ a {
 header, footer {
   background: #212427;
   color: ivory;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  
+  
 }
 
 header {
   padding: 1rem;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav a {
+  margin-left: 1rem;
+}
+
+.active {
+  font-weight: bold;
 }
 
 footer {
@@ -107,6 +124,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .image-container {
