--- a/src/index.css
+++ b/src/index.css
@@ -184,7 +184,7 @@ button:hover {
 /* Projects Page Styles */
 
 .screenshot-container {
-  width: 60%;
+  width: 70%;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   margin: 1rem;
 }
@@ -200,15 +200,16 @@ img {
   align-items: center;
   background: rgba(255, 255, 255, 0.7);
   width: 60%;
-  margin: 2rem auto;
-  padding: 3rem;
+  margin: 1rem auto;
+  padding: 2rem 1rem;
 }
 
 .projects-box {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  align-items: stretch;
+  margin-bottom: 2rem;
 }
 
 .project-box {
@@ -216,10 +217,10 @@ img {
   margin: 1rem;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  padding: 3rem 2rem;
-  width: 90%;
+  
+  width: 45%;
 }
 
 .modal-box {
