--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,7 @@ img {
   flex-flow: row wrap;
   justify-content: flex-end;
   align-items: stretch;
+  align-content: center;
   margin-bottom: 2rem;
 }
 
