--- a/src/index.css
+++ b/src/index.css
@@ -129,9 +129,17 @@ footer {
   align-items: center;
 }
 
+.img-container {
+  width: 5rem;
+}
+
+.img-container img {
+  max-width: 100%;
+}
+
 .image-container {
   margin: 1rem auto;
-  width: 25%;
+  width: 45%;
 }
 
 .image-container img {
