--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,7 @@ p {
 }
 
 #page-container {
-  position: relative;
-  min-height: 100vh;
+  min-height: 110vh;
 }
 
 #content-wrap {
@@ -208,13 +207,13 @@ header nav a {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 2.5rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  min-height: 10vh;
+  margin-bottom: none;
+  margin-top: 5rem;
 }
 
 .img-container {
@@ -243,7 +242,7 @@ footer {
   align-items: center;
   background: rgba(255, 255, 255, 0.7);
   width: 50%;
-  margin: 2rem auto;
+  margin: 2rem auto 14rem auto;
   padding: 2rem;
 }
 
