--- a/src/index.scss
+++ b/src/index.scss
@@ -241,6 +241,9 @@ footer div a:hover {
 .image-container {
   margin: 1rem auto;
   width: 45%;
+  @media (max-width: 1000px) {
+    width: 60%;
+  }
 }
 
 .image-container img {
@@ -259,6 +262,9 @@ footer div a:hover {
   margin: 2rem auto 14rem auto;
   padding: 2rem;
   min-height: 80vh;
+  @media (max-width: 500px) {
+    width: 75%;
+  }
 }
 
 .text-box {
@@ -269,10 +275,22 @@ footer div a:hover {
   background: rgb(177, 189, 17);
   margin: 1rem;
   padding: 1rem;
-}
-
-.text-box h1 {
-  margin-bottom: 1rem;
+  @media (max-width: 400px) {
+    width: 90%;
+    margin: auto;
+    padding: 1.75rem;
+  }
+  h1 {
+    margin-bottom: 1rem;
+    @media (max-width: 1000px) {
+      font-size: 2.5rem;
+    }
+  }
+  p {
+    @media (max-width: 500px) {
+      font-size: 1.25rem;
+    }
+  }
 }
 
 button {
@@ -298,6 +316,10 @@ button:hover {
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: 1000px) {
+    background: #457b2f;
+    margin-top: 1rem;
+  }
 }
 
 /* Projects Page Styles */
@@ -306,6 +328,9 @@ button:hover {
   width: 70%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   margin: 1rem;
+  @media (max-width: 1000px) {
+    width: 90%;
+  }
 }
 
 img {
@@ -321,15 +346,24 @@ img {
   width: 60%;
   margin: 1rem auto;
   padding: 2rem 1rem;
+  @media (max-width: 1000px) {
+    width: 80%;
+  }
 }
 
 .projects-box {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: stretch;
   align-content: center;
   margin-bottom: 2rem;
+  @media (max-width: 1000px) {
+    margin-top: 3rem;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .project-box {
@@ -339,8 +373,13 @@ img {
   flex-flow: column nowrap;
   justify-content: flex-end;
   align-items: center;
-
   width: 45%;
+  @media (max-width: 1500px) {
+    width: 70%;
+  }
+  @media (max-width: 1000px) {
+    width: 90%;
+  }
 }
 
 .modal-box {
@@ -348,34 +387,42 @@ img {
   flex-flow: column nowrap;
   justify-content: space-around;
   align-items: center;
-}
-
-.modal-box h2 {
-  margin: 1rem;
-  font-size: 2.5rem;
-  font-weight: bold;
-  letter-spacing: 0.2rem;
-}
-
-.modal-box h3 {
-  font-size: 1.75rem;
-  font-weight: bold;
-}
-
-.modal-box p {
-  margin: 1rem;
-  line-height: 2rem;
-  font-size: 1rem;
-}
-
-.modal-box a {
-  margin: 1rem;
-  transition: all 0.2s ease-in-out;
-}
-
-.modal-box a:hover {
-  font-style: italic;
-  transform: scale(1.2);
+  h2 {
+    margin: 1rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    @media (max-width: 1000px) {
+      font-size: 2rem;
+    }
+  }
+  h3 {
+    font-size: 1.75rem;
+    font-weight: bold;
+    @media (max-width: 1000px) {
+      font-size: 1.5rem;
+    }
+  }
+  p {
+    margin: 1rem;
+    line-height: 2rem;
+    font-size: 1rem;
+    @media (max-width: 1000px) {
+      font-size: 0.75rem;
+    }
+  }
+  a {
+    margin: 1rem;
+    font-size: 2rem;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+      font-style: italic;
+      transform: scale(1.2);
+    }
+  }
+  a.fa {
+    font-size: 4rem;
+  }
 }
 
 /* Contact Page Styles */
@@ -389,6 +436,20 @@ img {
   margin: 1rem auto;
   padding: 3rem;
   min-height: 90vh;
+  @media (max-width: 1000px) {
+    width: 80%;
+    padding: 1rem;
+  }
+  h2 {
+    @media (max-width: 1000px) {
+      font-size: 3rem;
+      padding: 2rem;
+    }
+    @media (max-width: 1000px) {
+      font-size: 2rem;
+      padding: 1rem;
+    }
+  }
 }
 
 form {
@@ -398,6 +459,9 @@ form {
   align-items: stretch;
   margin: 2rem;
   width: 65%;
+  @media (max-width: 1000px) {
+    width: 95%;
+  }
 }
 
 label {
@@ -412,6 +476,9 @@ textarea {
   line-height: 2rem;
   width: 100%;
   font-family: 'Raleway', sans-serif;
+  @media (max-width: 1000px) {
+    margin: 1rem 0 1rem 0;
+  }
 }
 
 form button {
