--- a/src/index.scss
+++ b/src/index.scss
@@ -321,6 +321,21 @@ button:hover {
     margin-top: 1rem;
   }
 }
+.resume-link {
+  background: #212427;
+  color: ivory;
+  padding: 1rem;
+  border: none;
+  margin: 1rem;
+  font-family: 'Raleway', sans-serif;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+  font-size: 1.25rem;
+  &:hover {
+    font-style: italic;
+    transform: scale(1.2);
+  }
+}
 
 /* Projects Page Styles */
 
