--- a/src/index.scss
+++ b/src/index.scss
@@ -349,17 +349,21 @@ button:hover {
 
 .skills-container {
   width: 90%;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
   padding: 2rem 1rem 1rem 1rem;
   margin: 1rem;
 }
 .skills-box {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  align-content: space-between;
   width: 100%;
   margin: 1rem;
+  @media (max-width: 800px) {
+    margin-left: 0.1rem;
+  }
 
   .skill-box {
     display: flex;
@@ -368,14 +372,26 @@ button:hover {
     align-items: center;
     width: 20%;
     padding: 0.5rem;
+    padding-left: 0;
+    @media (max-width: 800px) {
+      width: 30%;
+      padding: 0;
+      margin: 0;
+    }
 
     p {
       font-size: 1rem;
       margin: 0.5rem;
+      @media (max-width: 800px) {
+        font-size: 0.8rem;
+      }
       &.fa {
         font-size: 2.75rem;
         color: black;
         margin-bottom: 0;
+        @media (max-width: 800px) {
+          font-size: 1rem;
+        }
       }
     }
   }
