--- a/src/index.scss
+++ b/src/index.scss
@@ -512,8 +512,18 @@ img {
     justify-content: space-around;
     align-items: center;
     width: 60%;
+    @media (max-width: 1000px) {
+      width: 80%;
+    }
+    @media (max-width: 500px) {
+      flex-flow: column nowrap;
+      margin-left: -1rem;
+    }
     p {
       font-weight: bold;
+      @media (max-width: 500px) {
+        line-height: 1rem;
+      }
     }
     div {
       width: 50%;
