Feat: Adds Lambda Badge to About page

--- a/src/index.scss
+++ b/src/index.scss
@@ -371,6 +371,11 @@ button:hover {
     margin-top: 1rem;
   }
 }
+
+.badge {
+  max-width: 10em;
+}
+
 .resume-link {
   background: #212427;
   color: ivory;
