--- a/src/index.scss
+++ b/src/index.scss
@@ -324,7 +324,7 @@ footer div a:hover {
   }
   p {
     @media (max-width: 500px) {
-      font-size: 1.25rem;
+      font-size: 1rem;
     }
   }
 }
@@ -369,6 +369,7 @@ button:hover {
   @media (max-width: 1000px) {
     background: #457b2f;
     margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 }
 
